Refactor roles y nuevo role vip
